--- a/ssydx/blog/static/blog/css/map.css
+++ b/ssydx/blog/static/blog/css/map.css
@@ -2,20 +2,22 @@
     --body-backgroundcolor: rgba(240, 240, 240, 1);
 
     
-    --navwrapper-height: 2.5em;
-    --navwrapper-paddinghorizontal: 0.5em;
-    --navwrapper-marginbottom: 1.2em;
-    --navwrapper-gap: 0.5em;
-    --navwrapper-backgroundcolor: rgba(220, 220, 220, 1);
-    --navwrapper-gap:0.5em;
-    --navwrapper-boxshadow-gauss: 0.1em;
-    --navwrapper-boxshadow-color: rgba(0, 0, 0, 0.25);
+    --navcontainer-height: 2.5em;
+    --navcontainer-paddinghorizontal: 1em;
+    --navcontainer-paddingvertical: 0.5em;
+    --navcontainer-marginbottom: 1.2em;
+    --navcontainer-gapvertical: 0.5em;
+    --navcontainer-gaphorizontal: 0.5em;
+    --navcontainer-gap: 0.5em;
+    --navcontainer-backgroundcolor: rgba(220, 220, 220, 1);
+    --navcontainer-boxshadow-gauss: 0.1em;
+    --navcontainer-boxshadow-color: rgba(0, 0, 0, 0.25);
 
     --navleft-gap: 1em;
     --navright-gap: 1em;
     
 
-    --mainwrapper-marginhorizontal: 0.5em;
+    --mainwrapper-marginhorizontal: 1em;
     --mainwrapper-background-color: inherit;
     --mainwrapper-gap: 0.5em;
 
@@ -54,5 +56,148 @@
 
 
     --main-padding: 0.5em;
+
+
+
+
+
+    --pb-0: 0;
+    --pl-0: 0;
+    --pr-0: 0;
+    --px-0: 0;
+    --py-0: 0;
+    --p-0: 0;
+    --pt-1: 0.25rem;
+    --pb-1: 0.25rem;
+    --pl-1: 0.25rem;
+    --pr-1: 0.25rem;
+    --px-1: 0.25rem;
+    --py-1: 0.25rem;
+    --p-1: 0.25rem;
+    --pt-2: 0.5rem;
+    --pb-2: 0.5rem;
+    --pl-2: 0.5rem;
+    --pr-2: 0.5rem;
+    --px-2: 0.5rem;
+    --py-2: 0.5rem;
+    --p-2: 0.5rem;
+    --pt-3: 1rem;
+    --pb-3: 1rem;
+    --pl-3: 1rem;
+    --pr-3: 1rem;
+    --px-3: 1rem;
+    --py-3: 1rem;
+    --p-3: 1rem;
+    --pt-4: 1.5rem;
+    --pb-4: 1.5rem;
+    --pl-4: 1.5rem;
+    --pr-4: 1.5rem;
+    --px-4: 1.5rem;
+    --py-4: 1.5rem;
+    --p-4: 1.5rem;
+    --pt-5: 2rem;
+    --pb-5: 2rem;
+    --pl-5: 2rem;
+    --pr-5: 2rem;
+    --px-5: 2rem;
+    --py-5: 2rem;
+    --p-5: 2rem;
+    --pt-6: 3rem;
+    --pb-6: 3rem;
+    --pl-6: 3rem;
+    --pr-6: 3rem;
+    --px-6: 3rem;
+    --py-6: 3rem;
+    --p-6: 3rem;
+    --pt-auto: auto;
+    --pb-auto: auto;
+    --pl-auto: auto;
+    --pr-auto: auto;
+    --px-auto: auto;
+    --py-auto: auto;
+    --p-auto: auto;
+    --mt-0: 0;
+    --mb-0: 0;
+    --ml-0: 0;
+    --mr-0: 0;
+    --mx-0: 0;
+    --my-0: 0;
+    --m-0: 0;
+    --mt-1: 0.25rem;
+    --mb-1: 0.25rem;
+    --ml-1: 0.25rem;
+    --mr-1: 0.25rem;
+    --mx-1: 0.25rem;
+    --my-1: 0.25rem;
+    --m-1: 0.25rem;
+    --mt-2: 0.5rem;
+    --mb-2: 0.5rem;
+    --ml-2: 0.5rem;
+    --mr-2: 0.5rem;
+    --mx-2: 0.5rem;
+    --my-2: 0.5rem;
+    --m-2: 0.5rem;
+    --mt-3: 1rem;
+    --mb-3: 1rem;
+    --ml-3: 1rem;
+    --mr-3: 1rem;
+    --mx-3: 1rem;
+    --my-3: 1rem;
+    --m-3: 1rem;
+    --mt-4: 1.5rem;
+    --mb-4: 1.5rem;
+    --ml-4: 1.5rem;
+    --mr-4: 1.5rem;
+    --mx-4: 1.5rem;
+    --my-4: 1.5rem;
+    --m-4: 1.5rem;
+    --mt-5: 2rem;
+    --mb-5: 2rem;
+    --ml-5: 2rem;
+    --mr-5: 2rem;
+    --mx-5: 2rem;
+    --my-5: 2rem;
+    --m-5: 2rem;
+    --mt-6: 3rem;
+    --mb-6: 3rem;
+    --ml-6: 3rem;
+    --mr-6: 3rem;
+    --mx-6: 3rem;
+    --my-6: 3rem;
+    --m-6: 3rem;
+    --mt-auto: auto;
+    --mb-auto: auto;
+    --ml-auto: auto;
+    --mr-auto: auto;
+    --mx-auto: auto;
+    --my-auto: auto;
+    --m-auto: auto;
+
+    --gx-0: 0;
+    --gy-0: 0;
+    --gx-1: 0.25rem;
+    --gy-1: 0.25rem;
+    --gx-2: 0.5rem;
+    --gy-2: 0.5rem;
+    --gx-3: 1rem;
+    --gy-3: 1rem;
+    --gx-4: 1.5rem;
+    --gy-4: 1.5rem;
+    --gx-5: 2rem;
+    --gy-5: 2rem;
+    --gx-6: 3rem;
+    --gy-6: 3rem;
+    --gx-normal: normal;
+    --gy-normal: normal;
+    --h-0: 0;
+    --h-1: 0.25rem;
+    --h-2: 0.5rem;
+    --h-3: 1rem;
+    --h-4: 1.5rem;
+    --h-5: 2rem;
+    --h-6: 3rem;
+    --h-auto: auto;
+
+
 
 }
