--- a/ssydx/blog/static/blog/css/map.css
+++ b/ssydx/blog/static/blog/css/map.css
@@ -197,6 +197,21 @@
     --h-5: 2rem;
     --h-6: 3rem;
     --h-auto: auto;
+    --w-0: 0;
+    --w-1: 0.25rem;
+    --w-2: 0.5rem;
+    --w-3: 1rem;
+    --w-4: 1.5rem;
+    --w-5: 2rem;
+    --w-6: 3rem;
+    --w-auto: auto;
+    --fs-0: 0;
+    --fs-1: 0.25rem;
+    --fs-2: 0.5rem;
+    --fs-3: 1rem;
+    --fs-4: 1.5rem;
+    --fs-5: 2rem;
+    --fs-6: 3rem;
 
 
 
