--- a/ssydx/blog/static/blog/css/map.css
+++ b/ssydx/blog/static/blog/css/map.css
@@ -212,7 +212,14 @@
     --fs-4: 1.5rem;
     --fs-5: 2rem;
     --fs-6: 3rem;
-
+    --bw-0: 0.01rem;
+    --bw-1: 0.025rem;
+    --bw-2: 0.05rem;
+    --bw-3: 0.1rem;
+    --bw-4: 0.15rem;
+    --bw-5: 0.2rem;
+    --bw-6: 0.3rem;
+    
 
 
 }
